import { RaidBuffs } from '/tbc/core/proto/common.js';
import { PartyBuffs } from '/tbc/core/proto/common.js';
import { IndividualBuffs } from '/tbc/core/proto/common.js';
import { Debuffs } from '/tbc/core/proto/common.js';
import { RaidTarget } from '/tbc/core/proto/common.js';
import { NO_TARGET } from '/tbc/core/proto_utils/utils.js';
import { Stat } from '/tbc/core/proto/common.js';
import { TristateEffect } from '/tbc/core/proto/common.js';
import { StrengthOfEarthType } from '/tbc/core/proto/common.js';
import { Stats } from '/tbc/core/proto_utils/stats.js';
import { IndividualSimUI } from '/tbc/core/individual_sim_ui.js';
import { Alchohol } from '/tbc/core/proto/common.js';
import { BattleElixir } from '/tbc/core/proto/common.js';
import { Flask } from '/tbc/core/proto/common.js';
import { Food } from '/tbc/core/proto/common.js';
import { GuardianElixir } from '/tbc/core/proto/common.js';
import { Conjured } from '/tbc/core/proto/common.js';
import { Drums } from '/tbc/core/proto/common.js';
import { Potions } from '/tbc/core/proto/common.js';
import { WeaponImbue } from '/tbc/core/proto/common.js';
import { FeralDruid_Options as FeralDruidOptions } from '/tbc/core/proto/druid.js';
import * as IconInputs from '/tbc/core/components/icon_inputs.js';
import * as OtherInputs from '/tbc/core/components/other_inputs.js';
import * as DruidInputs from './inputs.js';
import * as Presets from './presets.js';
export class FeralDruidSimUI extends IndividualSimUI {
    constructor(parentElem, player) {
        super(parentElem, player, {
            cssClass: 'feral-druid-sim-ui',
            // List any known bugs / issues here and they'll be shown on the site.
            knownIssues: [],
            warnings: [
                // Warning that a frontal rotation is not implemented.
                (simUI) => {
                    return {
                        updateOn: simUI.player.inFrontOfTargetChangeEmitter,
                        shouldDisplay: () => simUI.player.getInFrontOfTarget(),
                        getContent: () => 'Frontal rotation (without Shred) is not implemented.',
                    };
                },
            ],
            // All stats for which EP should be calculated.
            epStats: [
                Stat.StatStrength,
                Stat.StatAgility,
                Stat.StatAttackPower,
                Stat.StatFeralAttackPower,
                Stat.StatMeleeHit,
                Stat.StatMeleeCrit,
                Stat.StatMeleeHaste,
                Stat.StatArmorPenetration,
                Stat.StatExpertise,
            ],
            // Reference stat against which to calculate EP. I think all classes use either spell power or attack power.
            epReferenceStat: Stat.StatAttackPower,
            // Which stats to display in the Character Stats section, at the bottom of the left-hand sidebar.
            displayStats: [
                Stat.StatHealth,
                Stat.StatStrength,
                Stat.StatAgility,
                Stat.StatIntellect,
                Stat.StatSpirit,
                Stat.StatAttackPower,
                Stat.StatMeleeHit,
                Stat.StatMeleeCrit,
                Stat.StatMeleeHaste,
                Stat.StatArmorPenetration,
                Stat.StatExpertise,
                Stat.StatMana,
                Stat.StatMP5,
            ],
            defaults: {
                // Default equipped gear.
                gear: Presets.P4_PRESET.gear,
                // Default EP weights for sorting gear in the gear picker.
                epWeights: Stats.fromMap({
                    [Stat.StatStrength]: 2.266,
                    [Stat.StatAgility]: 3.5,
                    [Stat.StatAttackPower]: 1,
                    [Stat.StatFeralAttackPower]: 1,
                    [Stat.StatMeleeHit]: 3.2,
                    [Stat.StatMeleeCrit]: 2.37,
                    [Stat.StatMeleeHaste]: 1.36,
                    [Stat.StatArmorPenetration]: 0.47,
                    [Stat.StatExpertise]: 3.2,
                }),
                // Default consumes settings.
                consumes: Presets.DefaultConsumes,
                // Default rotation settings.
                rotation: Presets.DefaultRotation,
                // Default talents.
                talents: Presets.StandardTalents.data,
                // Default spec-specific settings.
                specOptions: FeralDruidOptions.create({
                    innervateTarget: RaidTarget.create({
                        targetIndex: NO_TARGET, // In an individual sim the 0-indexed player is ourself.
                    }),
                    latencyMs: 100,
                }),
                // Default raid/party buffs settings.
                raidBuffs: RaidBuffs.create({
                    arcaneBrilliance: true,
                    giftOfTheWild: TristateEffect.TristateEffectImproved,
                }),
                partyBuffs: PartyBuffs.create({
                    drums: Drums.DrumsOfBattle,
                    bloodlust: 1,
                    manaSpringTotem: TristateEffect.TristateEffectRegular,
                    braidedEterniumChain: true,
                    graceOfAirTotem: TristateEffect.TristateEffectImproved,
                    strengthOfEarthTotem: StrengthOfEarthType.EnhancingTotems,
                    battleShout: TristateEffect.TristateEffectImproved,
                    snapshotBsSolarianSapphire: true,
                    sanctityAura: TristateEffect.TristateEffectImproved,
                }),
                individualBuffs: IndividualBuffs.create({
                    blessingOfKings: true,
                    blessingOfMight: TristateEffect.TristateEffectImproved,
                    unleashedRage: true,
                }),
                debuffs: Debuffs.create({
                    judgementOfWisdom: true,
                    improvedSealOfTheCrusader: true,
                    bloodFrenzy: true,
                    giftOfArthas: true,
                    exposeArmor: TristateEffect.TristateEffectImproved,
                    faerieFire: TristateEffect.TristateEffectImproved,
                    sunderArmor: true,
                    curseOfRecklessness: true,
                    huntersMark: TristateEffect.TristateEffectImproved,
                    exposeWeaknessUptime: 0.95,
                    exposeWeaknessHunterAgility: 1200,
                }),
            },
            // IconInputs to include in the 'Self Buffs' section on the settings tab.
            selfBuffInputs: [
                DruidInputs.SelfInnervate,
            ],
            // IconInputs to include in the 'Other Buffs' section on the settings tab.
            raidBuffInputs: [
                IconInputs.ArcaneBrilliance,
                IconInputs.DivineSpirit,
                IconInputs.GiftOfTheWild,
            ],
            partyBuffInputs: [
                IconInputs.DrumsOfBattleBuff,
                IconInputs.Bloodlust,
                IconInputs.StrengthOfEarthTotem,
                IconInputs.GraceOfAirTotem,
                IconInputs.ManaSpringTotem,
                IconInputs.BattleShout,
                IconInputs.BraidedEterniumChain,
                IconInputs.DraeneiRacialMelee,
                IconInputs.FerociousInspiration,
                IconInputs.SanctityAura,
                IconInputs.TrueshotAura,
            ],
            playerBuffInputs: [
                IconInputs.BlessingOfKings,
                IconInputs.BlessingOfWisdom,
                IconInputs.BlessingOfMight,
                IconInputs.UnleashedRage,
            ],
            // IconInputs to include in the 'Debuffs' section on the settings tab.
            debuffInputs: [
                IconInputs.JudgementOfWisdom,
                IconInputs.ImprovedSealOfTheCrusader,
                IconInputs.BloodFrenzy,
                IconInputs.HuntersMark,
                IconInputs.CurseOfRecklessness,
                IconInputs.FaerieFire,
                IconInputs.ExposeArmor,
                IconInputs.SunderArmor,
                IconInputs.GiftOfArthas,
                IconInputs.Mangle,
            ],
            // Which options are selectable in the 'Consumes' section.
            consumeOptions: {
                potions: [
                    Potions.SuperManaPotion,
                    Potions.FelManaPotion,
                    Potions.HastePotion,
                ],
                conjured: [
                    Conjured.ConjuredDarkRune,
                ],
                flasks: [
                    Flask.FlaskOfRelentlessAssault,
                ],
                battleElixirs: [
                    BattleElixir.ElixirOfMajorAgility,
                    BattleElixir.ElixirOfDemonslaying,
                ],
                guardianElixirs: [
                    GuardianElixir.ElixirOfDraenicWisdom,
                    GuardianElixir.ElixirOfMajorMageblood,
                ],
                food: [
                    Food.FoodGrilledMudfish,
                    Food.FoodSpicyHotTalbuk,
                ],
                alcohol: [
                    Alchohol.AlchoholKreegsStoutBeatdown,
                ],
                weaponImbues: [
                    WeaponImbue.WeaponImbueAdamantiteWeightstone,
                    WeaponImbue.WeaponImbueRighteousWeaponCoating,
                ],
                other: [
                    IconInputs.ScrollOfAgilityV,
                    IconInputs.ScrollOfStrengthV,
                ],
            },
            // Inputs to include in the 'Rotation' section on the settings tab.
            rotationInputs: DruidInputs.FeralDruidRotationConfig,
            // Inputs to include in the 'Other' section on the settings tab.
            otherInputs: {
                inputs: [
                    DruidInputs.LatencyMs,
                    OtherInputs.StartingPotion,
                    OtherInputs.NumStartingPotions,
                    OtherInputs.ExposeWeaknessUptime,
                    OtherInputs.ExposeWeaknessHunterAgility,
                    OtherInputs.SnapshotImprovedStrengthOfEarthTotem,
                    OtherInputs.SnapshotBsSolarianSapphire,
                    OtherInputs.SnapshotBsT2,
                    OtherInputs.TankAssignment,
                    OtherInputs.InFrontOfTarget,
                ],
            },
            encounterPicker: {
                // Target stats to show for 'Simple' encounters.
                simpleTargetStats: [
                    Stat.StatArmor,
                ],
                // Whether to include 'Execute Duration (%)' in the 'Encounter' section of the settings tab.
                showExecuteProportion: false,
            },
            // If true, the talents on the talents tab will not be individually modifiable by the user.
            // Note that the use can still pick between preset talents, if there is more than 1.
            freezeTalents: false,
            presets: {
                // Preset talents that the user can quickly select.
                talents: [
                    Presets.StandardTalents,
                    Presets.MonocatTalents,
                ],
                // Preset gear configurations that the user can quickly select.
                gear: [
                    Presets.P1_PRESET,
                    Presets.P2_PRESET,
                    Presets.P3_PRESET,
                    Presets.P4_PRESET,
                    Presets.P5_PRESET,
                ],
            },
        });
    }
}
